# textfilter

./: .gitignore  README.md  pyproject.toml  terms.txt
src/textfilter/: __init__.py  cli.py  core.py  ui.py
src/textfilter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
